<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FinanceHelper</string>
    <string name="select">Select</string>
    <string name="warning_data_will_be_lost">Do you want to discard the changes?</string>
    <string name="enter_category">Enter your category here</string>
    <string name="add_category">Add category</string>
    <string name="discard">Discard</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <plurals name="x_selected_items">
        <item quantity="one">%d selected item</item>
        <item quantity="other">%d selected items</item>
    </plurals>
    <string name="action_done">Done</string>
    <string name="action_delete">Delete</string>
    <string name="expense_field_empty_warning">The expense amount field is empty</string>
    <string name="expenses">Expenses</string>
    <string name="statistics">Statistics</string>
    <string name="enter_amount">Enter amount</string>
    <string name="today">Today</string>
    <string name="enter_name">Enter Name</string>
    <string name="to_for_the_date">to</string>
    <string name="total">Total</string>
    <string name="average">Average</string>
    <string name="fixed_time_span">Fixed Time Span</string>
    <string name="all_categories">All Categories</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="statistics_name_empty">Name field empty</string>
    <string name="warning_empty_date_for_fixed_date">Date field is empty</string>
    <string name="dynamic_time_span">Dynamic Time Span</string>
    <string name="action_edit_categories">Edit Categories</string>
    <string name="is_secondary">is secondary category</string>
    <string name="category_name_already_exists">Category already exists</string>
    <string name="current_day">Current day</string>
    <string name="current_week">Current week</string>
    <string name="current_month">Current month</string>
    <string name="current_year">Current year</string>
    <string name="add_statistic">Add statistic</string>
    <string name="add_expense">Add Expense</string>
    <string name="categories">Categories</string>
    <string name="include_categories">Include Categories</string>
    <string name="exclude_categories">Exclude Categories</string>
    <string name="confirm">Confirm</string>
    <string name="select_categories">Select Categories</string>
    <string name="no_category">No Category</string>
    <string name="dynamic_date_less_than_average_periodicity">The dynamic date set is less than the average periodicity selected.</string>
    <string name="action_crash">Crash</string>
    <string name="budget">Budget</string>
    <string name="wishlist">Wishlist</string>
    <string name="enter_limit">Enter limit</string>
    <string name="add_budget">Add budget</string>
    <string name="empty_limit">Limit field empty</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>
