<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddStatisticActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_add_statistic"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_statistic_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/enter_name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_add_statistic" />

    <View
        android:id="@+id/div_add_statistic_zeroth"
        style="@style/Divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_statistic_name" />

    <RadioGroup
        android:id="@+id/rg_total_average"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:checkedButton="@+id/rb_total"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/div_add_statistic_zeroth">

        <RadioButton
            android:id="@+id/rb_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total" />

        <RadioButton
            android:id="@+id/rb_average"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/average" />

        <Spinner
            android:id="@+id/s_average_periodicity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false" />

    </RadioGroup>

    <View
        android:id="@+id/div_add_statistic_first"
        style="@style/Divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_total_average" />

    <RadioGroup
        android:id="@+id/rg_fixed_dynamic_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:checkedButton="@+id/rb_fixed_date"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/div_add_statistic_first">

        <RadioButton
            android:id="@+id/rb_fixed_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fixed_time_span" />

        <RadioButton
            android:id="@+id/rb_dynamic_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dynamic_time_span" />

        <LinearLayout
            android:id="@+id/l_from_to_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_from_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="@string/select"
                android:importantForAutofill="no"
                android:inputType="date" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/to_for_the_date" />

            <EditText
                android:id="@+id/et_to_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="@string/select"
                android:importantForAutofill="no"
                android:inputType="date" />

        </LinearLayout>

        <Spinner
            android:id="@+id/s_dynamic_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false" />

    </RadioGroup>

    <View
        android:id="@+id/div_add_statistic_second"
        style="@style/Divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_fixed_dynamic_date" />

    <RadioGroup
        android:id="@+id/rg_statistics_category_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:checkedButton="@+id/rb_all_categories"
        android:clickable="true"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/div_add_statistic_second">

        <RadioButton
            android:id="@+id/rb_all_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_categories" />

        <RadioButton
            android:id="@+id/rb_select_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_categories" />

    </RadioGroup>

    <View
        android:id="@+id/div_add_statistic_third"
        style="@style/Divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_statistics_category_selection" />

    <Spinner
        android:id="@+id/s_statistics_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/div_add_statistic_third" />

</androidx.constraintlayout.widget.ConstraintLayout>