<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/l_add_expense"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddExpenseActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_add_expense"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/l_amount_currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_add_expense">

        <EditText
            android:id="@+id/e_expense_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/enter_amount"
            android:importantForAutofill="no"
            android:inputType="number|numberDecimal" />

        <Spinner
            android:id="@+id/s_expenses_currency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l_expense_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/l_amount_currency">

        <EditText
            android:id="@+id/e_expense_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:hint="@string/select"
            android:importantForAutofill="no"
            android:inputType="date" />

        <Button
            android:id="@+id/b_today"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/today" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/l_expense_date">

        <Spinner
            android:id="@+id/s_expenses_category_primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <Spinner
            android:id="@+id/s_expenses_category_secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>